The image cache using too much memory
When I play video in VM, switching video window mode between fullscreen and small window frequently, I found the memory spicy used is growing quickly. My client memory is 1G, After some, spicy died because of oom! And If I do some operation such as browsing news or pictures in browser, the memory is growing too. I check the commit, found this patch may cause it: c9d4773a. Is this a bug, or other questions?
Edited by yueyihua